# Naive_Ray_Tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Light.h  Material.h  Plane.h  Ray.h  Scene.h  Sphere.h  Surface.h  Vector.h
lib/: CMakeLists.txt  Material.cpp  Plane.cpp  Scene.cpp  Sphere.cpp  Surface.cpp
